--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,17 +7,18 @@ spring:
     serialization:
       write_dates_as_timestamps: false
   datasource:
-    driver-class-name: org.h2.Driver
-    url: jdbc:h2:./banco/banco_h2db
-    username: admin
-    password: admin
+    driver-class-name: org.postgresql.Driver
+    url: jdbc:postgresql://localhost/projeto-frontend
+    username: postgres
+    password: postgres
   jpa:
+    database: POSTGRESQL
     properties:
       hibernate:
-        jdbc:
-          lob.non_contextual_creation: true      
         show_sql: true
         format_sql: true
-        dialect: org.hibernate.dialect.H2Dialect
+        ejb.naming_strategy: org.hibernate.cfg.ImprovedNamingStrategy
+        jdbc.lob.non_contextual_creation: true
         hbm2ddl:
           auto: update
+
